apps/executor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: executor
  labels:
    app: executor
spec:
  type: ClusterIP
  ports:
    - port: 4400
      targetPort: 4400
      name: http
  selector:
    app: executor
